--- a/package.json
+++ b/package.json
@@ -1,16 +1,14 @@
 {
-  "name": "react18",
+  "name": "react18-ice",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@babel/plugin-proposal-decorators": "^7.14.5",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
-    "craco-less": "^1.17.1",
-    "react": "^18.0.0-alpha-c96b78e0e",
-    "react-dom": "^18.0.0-alpha-c96b78e0e",
-    "react-scripts": "4.0.3",
+    "react": "^18.0.0-alpha-d7dce572c",
+    "react-dom": "^18.0.0-alpha-d7dce572c",
+    "react-scripts": "^4.0.3",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
